# TinyKernel

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  docker_build.sh
kernels/: cuda_utils.h
kernels/cutlass_gemm/: benchmark.py  cutlass_gemm.cu  cutlass_gemm.py
kernels/gemm/cutlass/: benchmark.py  gemm.py  test.py
kernels/gemm/hgemm/: benchmark.py  test.py
kernels/gemm/naive/: benchmark.py  benchmark_hgemm.py  gemm.cu  hgemm.cu  test.py  test_hgemm.py  test_sgemm.py
kernels/gemm/sgemm/: benchmark.py  gemm.cu
kernels/sgemm/: benchmark.py  sgemm.cu
tools/: gpu_spec.py
